--- a/src/main/resources/templates/detalle.html
+++ b/src/main/resources/templates/detalle.html
@@ -5,11 +5,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1></h1>
-<h3 th:text="${Vacante.nombre}"></h3>
-<h3 th:text="${Vacante.fecha}"></h3>
-<h3 th:text="${Vacante.salario}"></h3>
-<h3 th:text="${Vacante.descripcion}"></h3>
+<h1>Detalle de la oferta de trabajo</h1>
+<h3 th:text=" 'Nombre: '+ ${Vacante.nombre}"></h3> <!-- // nombre es una prpiedad del objetp Vacate de la clase -->
+<h3 th:text=" 'Fecha de publicacion: '+${Vacante.fecha}"></h3>
+<h3 th:text=" 'Salario: '+${Vacante.salario}"></h3>
+<h3 th:text=" 'Descripción: '+${Vacante.descripcion}"></h3>
 
 </body>
 </html>
