--- a/src/main/resources/templates/tabla.html
+++ b/src/main/resources/templates/tabla.html
@@ -28,25 +28,22 @@
 
 			</tr>
 
-			<tr th:each="vacante:${vacantes}">
+		<tr th:each="vacante:${vacantes}"> <!-- 	el primero es la variable temporal ,el segundo es el atributp de tabla -->
 				<td><img th:src="@{/images/{img}(img=${vacante.imagen})}"
 					width="100" height="100"></td>
-				<td th:text="${vacante.id}"></td>
+				<td th:text="${vacante.id}"></td> <!-- 	// la variable temporal es la q se asocia -->
 				<td th:text="${vacante.nombre}"></td>
 				<td th:text="${vacante.fecha}"></td>
 				<td th:text="${vacante.salario}"></td>
-				<td th:text="${vacante.descripcion}"></td>
-				<!-- 		<td th:text="${vacante.destacado==1 ? 'sí':'no'}"></td> -->
-				<td><span th:if="${vacante.destacado==1}" class="badge bg-success">Sí</span> 
-				<span th:unless="${vacante.destacado==1}" class="badge bg-danger">No</span>
+				<td th:text="${vacante.descripcion}"></td> <!-- 		<td th:text="${vacante.destacado==1 ? 'sí':'no'}"></td> -->
+				<td><span th:if="${vacante.destacado==1}"
+					class="badge bg-success">Sí</span> <span
+					th:unless="${vacante.destacado==1}" class="badge bg-danger">No</span>
 				</td>
-				<td>
-				<a th:href="@{/vacantes/view/{id}(id=${vacante.id})}" type="button" class="btn btn-success btn-sm">Detalle</a>
-				</td>
-				<td>
-				<a th:href="@{/vacantes/delete(id=${vacante.id})}" type="button" class="btn btn-danger btn-sm">Borrar</a>
-				
-				</td>
+				<td><a th:href="@{/vacantes/view/{id}(id=${vacante.id})}"
+					type="button" class="btn btn-success btn-sm">Detalle</a></td>
+				<td><a th:href="@{/vacantes/delete(id=${vacante.id})}"
+					type="button" class="btn btn-danger btn-sm">Borrar</a></td>
 			</tr>
 
 		</table>
