--- a/src/main/resources/templates/detalle.html
+++ b/src/main/resources/templates/detalle.html
@@ -9,7 +9,7 @@
 <h3 th:text=" 'Nombre: '+ ${Vacante.nombre}"></h3> <!-- // nombre es una prpiedad del objetp Vacate de la clase -->
 <h3 th:text=" 'Fecha de publicacion: '+${Vacante.fecha}"></h3>
 <h3 th:text=" 'Salario: '+${Vacante.salario}"></h3>
-<h3 th:text=" 'Descripción: '+${Vacante.descripcion}"></h3>
+<h3 th:text=" 'Descripcion: '+${Vacante.descripcion}"></h3>
 
 </body>
 </html>
